@@ -1,5 +1,6 @@
 == master
 
+* Add a generator for db migrations
 * Release gems via rake-gemcutter instead of rubyforge
 * By default, sort messages newest first [Alexander Lang]
 
